[package]
name = "filetracker-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }

# These are all dependencies of axum anyway
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
http-body-util = "0.1"
tracing = "0.1"

tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# for RFC 2822 time serialization
chrono = { version = "0.4", features = ["serde"] }

# for gzip compression
flate2 = "1"

# why does filetracker need this
sha2 = "0.10"

clap = { version = "4.5", features = ["derive"] }
